# rust-libnotify-sys

./: Cargo.toml  README.md  build.rs
examples/: show.rs
src/: lib.rs  notification.rs
