[package]

name = "libnotify-sys"
version = "0.4.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
license = "MIT"
description = "FFI bindings to libnotify"
readme = "README.md"
repository = "https://github.com/crumblingstatue/rust-libnotify-sys"
keywords = ["libnotify", "notification"]

build = "build.rs"
links = "libnotify"

[dependencies]
gobject-2-0-sys = "0.46.1"
glib-sys = "^0.3.4"
gtypes = "0.2"

[build-dependencies]
pkg-config = "0.3"
